# fred-macro-pulse

./: .env.example  .gitignore  FRED_MACRO_PULSE_BLUEPRINT.md  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  pipeline.yml
dashboard/: app.py
dashboard/.streamlit/: secrets.toml.example
src/fred_macro_pulse/: __main__.py  cli.py
src/fred_macro_pulse/client/: fred.py  models.py
src/fred_macro_pulse/config/: series.yaml  settings.py
src/fred_macro_pulse/pipeline/: extract.py  load.py  qa.py  transform.py
src/fred_macro_pulse/warehouse/: schema.py
src/fred_macro_pulse/warehouse/migrations/: 001_raw.sql  002_dimensional.sql  003_regime.sql
src/fred_macro_pulse/warehouse/views/: v_latest_values.sql  v_macro_composite.sql  v_recession_signals.sql  v_rolling_avg.sql  v_yield_curve.sql  v_yoy_change.sql
tests/: conftest.py  test_client.py  test_load.py  test_transform.py
