[project]
name = "fred-macro-pulse"
version = "0.1.0"
description = "Production-grade incremental ETL pipeline for Federal Reserve economic data"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "polars>=1.0",
    "duckdb>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "pyarrow>=24.0.0",
    "streamlit>=1.58.0",
]

[project.scripts]
fred-macro-pulse = "fred_macro_pulse.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fred_macro_pulse"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
